Converting table to canvas. Adding in start of method to draw the player on the canvas. next up, structure a draw method for redrawing per input. adding logic to stay on the path. api integration for generating random starting coordinate.

--- a/treasure-map/src/app/app.component.html
+++ b/treasure-map/src/app/app.component.html
@@ -8,21 +8,5 @@
 </div>
 
 <body>
-  <table class='table'>
-    <tbody>
-      <tr *ngFor="let numArray of treasureMap">
-        <td *ngFor="let num of numArray">
-          <div class="main_content" *ngIf="num == 0">
-            <img src="assets/images/30x30_tree.png" alt="tree">
-          </div>
-          <div class="main_content" *ngIf="num == 1">
-            <img src="assets/images/30x30_sand.png" alt="sand">
-          </div>
-          <div class="main_content" *ngIf="num == 2">
-            <img src="assets/images/30x30_treasure.png" alt="treasure">
-          </div>
-        </td>
-      </tr>
-    </tbody>
-  </table>
+  <canvas id="treasureMapCanvas" style="border:1px solid"></canvas>
 </body>
