--- a/treasure-map/src/app/app.component.css
+++ b/treasure-map/src/app/app.component.css
@@ -3,29 +3,21 @@
 body 
 {
   margin: 0;
-
 } 
 
-.main_header 
-{ 
-  background: tomato;
-  height: 250px;
-  width:100%;
-
-
+td {
+  box-sizing: border-box;
+  line-height: 0;
+  padding: 0;
 }
 
-.main_content 
-{
-  display:inline-block;
-  padding:0;
-  margin:0;
-  width:100%;
-
+tr {
+  box-sizing: border-box;
+  padding: 0;
 }
 
 table {
     table-layout: fixed;
-    width: 100%;
-    height: 100%;
+    border-spacing: 0;
+    border-collapse: collapse;
   }
