refactor to services. Adding movement pieces via keyclicks

--- a/treasure-map/src/app/app.component.html
+++ b/treasure-map/src/app/app.component.html
@@ -8,5 +8,5 @@
 </div>
 
 <body>
-  <canvas id="treasureMapCanvas" style="border:1px solid"></canvas>
+  <canvas id="treasureMapCanvas" tabindex=1 style="border:1px solid" (keypress)="movePlayer($event)"></canvas>
 </body>
