--- a/treasure-map/src/app/app.component.css
+++ b/treasure-map/src/app/app.component.css
@@ -1,5 +1,12 @@
 * { box-sizing: border-box; }
 
+.bg-img {
+  background-image: url(../assets/images/Gravity_Falls_Background.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat; 
+  }
+
 body 
 {
   margin: 0;
@@ -16,13 +23,22 @@ tr {
   padding: 0;
 }
 
-table {
-    table-layout: fixed;
-    border-spacing: 0;
-    border-collapse: collapse;
-  }
-
-input, label {
+input, label, button, select {
   display: inline;
   margin: 5px;
+  margin-left: 0px;
 }
+
+kbd {
+  background-color: #eee;
+  border-radius: 3px;
+  border: 1px solid #b4b4b4;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, .2), 0 2px 0 0 rgba(255, 255, 255, .7) inset;
+  color: #333;
+  display: inline-block;
+  font-size: .85em;
+  font-weight: 700;
+  line-height: 1;
+  padding: 2px 4px;
+  white-space: nowrap;
+ }
