Revamping digging treasure logic. Adding a larger progress zodiac. Still needs placeholder symbols though.

--- a/treasure-map/src/app/app.component.html
+++ b/treasure-map/src/app/app.component.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <h1><div [innerHTML]="title"></div></h1>
-  <p style="font-size:18px;">Movement: <kbd>&#8593;</kbd> <kbd>&#8592;</kbd> <kbd>&#8595;</kbd> <kbd>&#8594;</kbd> <b> OR </b> <kbd>W</kbd> <kbd>A</kbd> <kbd>S</kbd> <kbd>D</kbd>&emsp;Dig for Treasure: <kbd>Space</kbd></p>
+  <p style="font-size:18px;">Movement: <kbd>&#8593;</kbd> <kbd>&#8592;</kbd> <kbd>&#8595;</kbd> <kbd>&#8594;</kbd> <b> OR </b> <kbd>W</kbd> <kbd>A</kbd> <kbd>S</kbd> <kbd>D</kbd>&emsp;Dig for Treasure: <kbd>Space</kbd>&emsp;Check Progress: <kbd>P</kbd></p>
   <div id="inputs">
       <label>Map: </label>
       <button autofocus (click)="generateTreasureMap()">Generate Map</button>
