--- a/treasure-map/src/styles.css
+++ b/treasure-map/src/styles.css
@@ -1,1 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.custom-modalbox .mat-dialog-container {
+    background: url("./assets/images/journal_blank_page.jpg");
+    padding: 0;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: block;
+    padding: 24px;
+    border-radius: 4px;
+    box-sizing: border-box;
+    overflow: auto;
+    outline: 0;
+    width: 100%;
+    height: 100%;
+    min-height: inherit;
+    max-height: inherit;
+}
