Prepping for adding the ending scenes. Will finish once some graphics are done.

--- a/treasure-map/src/app/intro-dialog-body/intro-dialog-body.component.html
+++ b/treasure-map/src/app/intro-dialog-body/intro-dialog-body.component.html
@@ -10,7 +10,7 @@
 <br>
 
 <p class='no-tab'>The Rules</p>
-<p class='tab'> Bill Cipher is searching everywhere for where these Zodiac Signs might be burried. He has temporarily given you complete control.</p>
+<p class='tab'> Bill Cipher is searching everywhere to find out where these Zodiac Signs might be buried. He says he will temporarily give you <b>COMPLETE</b> control.</p>
 <br>
 <p class='tab'> Walk around using <kbd>&#8593;</kbd> <kbd>&#8592;</kbd> <kbd>&#8595;</kbd> <kbd>&#8594;</kbd> <b> OR </b> <kbd>W</kbd> <kbd>A</kbd> <kbd>S</kbd> <kbd>D</kbd></p>
 <br>
@@ -19,9 +19,9 @@
 <br>
 <p class='tab'> After you find a Zodiac sign, a portal, <img src='../assets/images/30x30_Portal_teal.png' />, will appear. </p>
 <p class='tab'> Walk to the portal and press <kbd>Space Bar</kbd> so Bill can teleport to the next region where he believes a Zodiac sign could be found.</p>
-<p class='tab'> Don't forget to search for other treasures before teleporting away though! You never know what useful items Bill can discover.</p>
+<p class='tab'> Don't forget to search for other treasures before teleporting away though! You never know what useful items can be discovered.</p>
 <br>
-<p class='tab'> You can check the progress Bill is making by pressing <kbd>P</kbd>.</p>
+<p class='tab'> You can check your progress by pressing <kbd>P</kbd>.</p>
 
 </mat-dialog-content>
 
