--- a/treasure-map/src/app/app.component.html
+++ b/treasure-map/src/app/app.component.html
@@ -12,7 +12,7 @@
   <p style="font-size:18px;">Movement: <kbd>&#8593;</kbd> <kbd>&#8592;</kbd> <kbd>&#8595;</kbd> <kbd>&#8594;</kbd> <b> OR </b> <kbd>W</kbd> <kbd>A</kbd> <kbd>S</kbd> <kbd>D</kbd>&emsp;Dig for Treasure: <kbd>Space</kbd>&emsp;Check Progress: <kbd>P</kbd></p>
   <div id="inputs">
       <button autofocus (click)="generateTreasureMap()">Reset Progress</button>
-      <label>Map Algorithm:</label>
+      <!-- <label>Map Algorithm:</label>
       <select class="form-control" [(ngModel)]="mapAlgorithmInput" name="mapAlgorithmInput">
         <option *ngFor="let mapAlgorithm of mapAlgorithmValues" [ngValue]="mapAlgorithm">{{mapAlgorithm.type}}</option>
       </select>
@@ -24,7 +24,7 @@
       <input [(ngModel)]="maxTunnelsInput" *ngIf="mapAlgorithmInput.type == 'Random_Walk'" type="number" name="maxTunnelsInput" maxlength="4" value="450" />
       <label *ngIf="mapAlgorithmInput.type == 'Random_Walk'">maxLength:</label>
       <input  [(ngModel)]="maxLengthInput" *ngIf="mapAlgorithmInput.type == 'Random_Walk'" type="number" name="maxLengthInput" maxlength="3" value="20" />
-      <!-- <label>Number of Treasures:</label>
+      <label>Number of Treasures:</label>
       <input  [(ngModel)]="treasuresInput"type="number" name="treasuresInput" maxlength="2" value="10" /> -->
   </div>
 
