Adding path post processing. Adding sounds. Disabling graphics for treaures

--- a/treasure-map/src/app/app.component.html
+++ b/treasure-map/src/app/app.component.html
@@ -11,7 +11,7 @@
 <body>
   <p style="font-size:18px;">Movement: <kbd>&#8593;</kbd> <kbd>&#8592;</kbd> <kbd>&#8595;</kbd> <kbd>&#8594;</kbd> <b> OR </b> <kbd>W</kbd> <kbd>A</kbd> <kbd>S</kbd> <kbd>D</kbd>&emsp;Dig for Treasure: <kbd>Space</kbd>&emsp;Check Progress: <kbd>P</kbd></p>
   <div id="inputs">
-      <button autofocus (click)="generateTreasureMap()">Reset Progress</button>
+      <button autofocus (click)="resetProgress()">Reset Progress</button>
       <!-- <label>Map Algorithm:</label>
       <select class="form-control" [(ngModel)]="mapAlgorithmInput" name="mapAlgorithmInput">
         <option *ngFor="let mapAlgorithm of mapAlgorithmValues" [ngValue]="mapAlgorithm">{{mapAlgorithm.type}}</option>
