Moving Progress tracker to a MatDialog. Updating Intro verbiage.

--- a/treasure-map/src/app/intro-dialog-body/intro-dialog-body.component.html
+++ b/treasure-map/src/app/intro-dialog-body/intro-dialog-body.component.html
@@ -3,14 +3,15 @@
 <mat-dialog-content>
 
 <p class='name'> <b>Connor,</b> </p>
-<p class='no-tab'> The big day is here! Bill Cipher desperately needs your help. He has found a way to forge an <i>Amulet of Protection</i> using the Zodiac signs.</p>
-<p class='no-tab'> This will protect him from the people in Gravity Falls as he finishes his master plan, but he needs you to help him find all 10 Zodiac signs.</p>
-<p class='no-tab'> If you can help him forge this magical Amulet, maybe he can help you with a clue.... There is only one way to find out.</p>
+<p class='no-tab'> The big day is here, and Bill Cipher desperately needs your help to forge the <i>Amulet of Protection</i>.</p>
+<p class='no-tab'> The Amulet of Protection uses the Zodiac signs to protect Bill from the people of Gravity Falls as he finishes his master plan.</p>
+<p class='no-tab'> He needs <b>YOUR</b> help to complete the magical Amulet. If you help him, he may help you with the next step of your journey.</p>
+<p class='no-tab'> There is only one way to find out……</p>
 
 <br>
 
 <p class='no-tab'>The Rules</p>
-<p class='tab'> Bill Cipher is searching everywhere to find out where these Zodiac Signs might be buried. He says he will temporarily give you <b>COMPLETE</b> control.</p>
+<p class='tab'> Bill Cipher is searching everywhere to find the hidden Zodiac signs. He says he will grant you <b>COMPLETE</b> control, temporarily of course. </p>
 <br>
 <p class='tab'> Walk around using <kbd>&#8593;</kbd> <kbd>&#8592;</kbd> <kbd>&#8595;</kbd> <kbd>&#8594;</kbd> <b> OR </b> <kbd>W</kbd> <kbd>A</kbd> <kbd>S</kbd> <kbd>D</kbd></p>
 <br>
