--- a/treasure-map/src/app/app.component.html
+++ b/treasure-map/src/app/app.component.html
@@ -9,9 +9,9 @@
     </style>
 </head>
 <body>
-  <p style="font-size:18px;">Movement: <kbd>&#8593;</kbd> <kbd>&#8592;</kbd> <kbd>&#8595;</kbd> <kbd>&#8594;</kbd> <b> OR </b> <kbd>W</kbd> <kbd>A</kbd> <kbd>S</kbd> <kbd>D</kbd>&emsp;Dig for Treasure: <kbd>Space</kbd>&emsp;Check Progress: <kbd>P</kbd></p>
   <div id="inputs">
-      <button autofocus (click)="resetProgress()">Reset Progress</button>
+      
+      <p style="font-size:18px;"><button autofocus (click)="resetProgress()">Reset Progress</button>&emsp;&emsp;Movement: <kbd>&#8593;</kbd> <kbd>&#8592;</kbd> <kbd>&#8595;</kbd> <kbd>&#8594;</kbd> <b> OR </b> <kbd>W</kbd> <kbd>A</kbd> <kbd>S</kbd> <kbd>D</kbd>&emsp;Dig for Treasure: <kbd>Space</kbd>&emsp;Check Progress: <kbd>P</kbd></p>
       <!-- <label>Map Algorithm:</label>
       <select class="form-control" [(ngModel)]="mapAlgorithmInput" name="mapAlgorithmInput">
         <option *ngFor="let mapAlgorithm of mapAlgorithmValues" [ngValue]="mapAlgorithm">{{mapAlgorithm.type}}</option>
